<resources>
    <string name="app_name">Devs</string>
    <string name="titulo_lista">Lista de Devs</string>
    <string name="titulo_cadastro">Cadastro de Devs</string>
    <string-array name="opcoes_spinner">
        <item>Júnior</item>
        <item>Pleno</item>
        <item>Sênior</item>
    </string-array>
    <string name="salvar">Salvar</string>
    <string name="backend">Backend</string>
    <string name="frontend">Frontend</string>
    <string name="fullstack">Fullstack</string>
    <string name="empregado">Empregado atualmente?</string>
</resources>